[gd_scene load_steps=8 format=3 uid="uid://su7snf7g0nm0"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_4ukrk"]
[ext_resource type="Texture2D" uid="uid://nc8nl3dsp17i" path="res://Assets/Art/Pixel Adventure 1/Background/Brown.png" id="1_hyr6e"]
[ext_resource type="FontFile" uid="uid://c5173mg0bvisv" path="res://Assets/Art/PixelDash.ttf" id="2_fdita"]
[ext_resource type="Texture2D" uid="uid://bnmul5ihp4gsd" path="res://Assets/Art/Pixel Adventure 1/Menu/Buttons/Close.png" id="3_i7bl3"]
[ext_resource type="Texture2D" uid="uid://drb4io4op8sof" path="res://Assets/Art/Pixel Adventure 1/Menu/Buttons/Play.png" id="3_vbnot"]
[ext_resource type="Texture2D" uid="uid://d2l8s5p7bygl3" path="res://Assets/Art/Pixel Adventure 1/Menu/Levels/01.png" id="6_olkj0"]
[ext_resource type="Texture2D" uid="uid://br87o0iidfcur" path="res://Assets/Art/Pixel Adventure 1/Menu/Levels/02.png" id="7_bsa5q"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ukrk")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hyr6e")
stretch_mode = 1

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_fdita")
theme_override_font_sizes/font_size = 64
text = "P I X E L    D A S H"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 288.0
offset_right = 51.0
offset_bottom = 402.0
grow_horizontal = 2
icon = ExtResource("3_vbnot")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_bottom = 112.0
grow_horizontal = 0
icon = ExtResource("3_i7bl3")
flat = true
expand_icon = true

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -84.0
offset_right = 392.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1Button" type="Button" parent="HFlowContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
icon = ExtResource("6_olkj0")
flat = true
expand_icon = true

[node name="Level2Button" type="Button" parent="HFlowContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
icon = ExtResource("7_bsa5q")
flat = true
expand_icon = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HFlowContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="HFlowContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
